# the_manager_project

./: .gitattributes  .gitignore  README.md  app.py  data_processor.py  pyproject.toml  requirements.txt
data/raw/: clubs.csv
data/trans/: manager_history.csv  pl_clubs.csv  player_index.csv
