[tool.poetry]
name = "the-manager-project"
version = "0.1.0"
description = ""
authors = ["sh0gun47 <arthomson90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.40.1"
pandas = "^2.2.3"
plotly = "^5.24.1"
ipython = "^8.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
